work in progress

--- a/Flip2Learn.Forms/Pages/GamePage.xaml
+++ b/Flip2Learn.Forms/Pages/GamePage.xaml
@@ -8,13 +8,13 @@
                        xmlns:controls="clr-namespace:Flip2Learn.Forms.Controls"
                        xmlns:views="clr-namespace:Flip2Learn.Forms.Views"
                        xmlns:ui="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
-                       BackgroundColor="#FF0082FE"
+                       BackgroundColor="{DynamicResource main_bg}"
                        NavigationPage.HasNavigationBar="False"
                        x:Class="Flip2Learn.Forms.Pages.GamePage">
 
     <RelativeLayout>
 
-        <RelativeLayout Opacity="0.08"
+        <RelativeLayout Opacity="0.1"
                         RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}"
                         RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1}">
 
@@ -38,17 +38,53 @@
 
             <StackLayout x:Name="appBar" Grid.Row="0" Grid.Column="0" Orientation="Vertical">
 
-                <RelativeLayout Opacity="0" HeightRequest="25">
-                    <BoxView x:Name="progress" WidthRequest="200" HeightRequest="2" CornerRadius="1" BackgroundColor="White" Margin="12,12" HorizontalOptions="Start"/>
-                    <BoxView x:Name="progressBackground" HeightRequest="2" CornerRadius="1" BackgroundColor="White" Margin="12,12" Opacity="0.4" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}"/>
+                <RelativeLayout Opacity="1" HeightRequest="25">
+                    <BoxView x:Name="progress" WidthRequest="200" HeightRequest="2" CornerRadius="1" BackgroundColor="{DynamicResource GreenAccent}" Margin="12,12" HorizontalOptions="Start"/>
+                    <BoxView x:Name="progressBackground" HeightRequest="2" CornerRadius="1" BackgroundColor="{DynamicResource GreenAccent}" Margin="12,12" Opacity="0.4" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}"/>
                 </RelativeLayout>
 
                 <StackLayout Orientation="Horizontal" Padding="16,2" HorizontalOptions="FillAndExpand">
-                    <views:RippleView Opacity="0" x:Name="close" IsCircled="True" VerticalOptions="Center">
+                    <!--<views:RippleView Opacity="0" x:Name="close" IsCircled="True" VerticalOptions="Center">
                         <ui:MaterialIcon WidthRequest="24" HeightRequest="24" Source="ic_close_24dp" />
-                    </views:RippleView>
+                    </views:RippleView>-->
 
-                    <Label HorizontalOptions="CenterAndExpand" Margin="-40,0,0,0" Text="Flip2Learn" TextColor="White" FontSize="17" Opacity="0.65" FontAttributes="Bold" FontFamily="sans-serif-medium" VerticalOptions="Center"/>
+                    <StackLayout
+                        x:Name="titleContainer"
+                        HorizontalOptions="CenterAndExpand"
+                        VerticalOptions="Center"
+                        Spacing="0">
+
+                        <Label 
+                           HorizontalOptions="Center"
+                           Text="Sprint"
+                           TextColor="{DynamicResource fg}"
+                           FontSize="17"
+                           Opacity="0.65"
+                           FontAttributes="Bold"
+                           FontFamily="sans-serif-medium"/>
+
+                        <Label
+                            x:Name="subtitle"
+                            HorizontalOptions="Center"
+                            FontSize="12"
+                            Text="3 of 10"
+                            TextColor="{DynamicResource second_fg}"
+                            Opacity="0.65"/>
+
+                    </StackLayout>
+
+                    <views:RippleView x:Name="settings"
+                                      Padding="12,4"
+                                      HasShadow="False"
+                                      Elevation="0"
+                                      VerticalOptions="Center"
+                                      BackgroundColor="#69f0ae">
+
+                        <StackLayout Orientation="Horizontal">
+                            <Label x:Name="knownCountries" Text="✔️ 12" TextColor="Black" HorizontalOptions="Center" FontAttributes="Bold"/>
+                        </StackLayout>
+
+                    </views:RippleView>
 
                 </StackLayout>
 
@@ -85,7 +121,6 @@
             </StackLayout>
 
         </Grid>
-
 
     </RelativeLayout>
 
