--- a/Flip2Learn.Forms/Views/QuestionCard.xaml
+++ b/Flip2Learn.Forms/Views/QuestionCard.xaml
@@ -23,8 +23,8 @@
 
                         <StackLayout Orientation="Vertical" Margin="0,32">
 
-                            <Label x:Name="resultSubtitle" TextColor="{DynamicResource second_fg}" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand"/>
-                            <Label x:Name="resultTitle" FontAttributes="Bold" LineHeight="1" TextColor="{DynamicResource fg}" HorizontalTextAlignment="Center" FontSize="32" HorizontalOptions="CenterAndExpand" />
+                            <Label x:Name="resultSubtitle" Style="{DynamicResource Subitle}" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand"/>
+                            <Label x:Name="resultTitle" Style="{DynamicResource TitleBold}" LineHeight="1" HorizontalTextAlignment="Center" FontSize="32" HorizontalOptions="CenterAndExpand" />
 
                             <Label x:Name="flagBack" HorizontalTextAlignment="Center" TextColor="Black" FontSize="52" HorizontalOptions="Center" />
 
@@ -34,7 +34,7 @@
 
                     <views:RippleView x:Name="know" HorizontalOptions="Center" Padding="22,8" HasShadow="False" Elevation="0" BackgroundColor="{StaticResource GreenAccent}">
                         <StackLayout Orientation="Horizontal">
-                            <Label Text="✔️ Mark as known" TextColor="Black" HorizontalOptions="Center" FontAttributes="Bold"/>
+                            <Label Text="✔️ Mark as known" TextColor="Black" HorizontalOptions="Center" Style="{DynamicResource Bold}"/>
                         </StackLayout>
                     </views:RippleView>
 
@@ -48,8 +48,8 @@
 
                         <StackLayout Orientation="Vertical" Margin="12,24">
 
-                            <Label x:Name="subtitle" TextColor="{DynamicResource second_fg}" HorizontalTextAlignment="Center" HorizontalOptions="Center"/>
-                            <Label x:Name="title" FontAttributes="Bold" LineHeight="1" TextColor="{DynamicResource fg}" HorizontalTextAlignment="Center"  FontSize="32" HorizontalOptions="Center" />
+                            <Label x:Name="subtitle" Style="{DynamicResource Subitle}" HorizontalTextAlignment="Center" HorizontalOptions="Center"/>
+                            <Label x:Name="title" Style="{DynamicResource TitleBold}" LineHeight="1" HorizontalTextAlignment="Center"  FontSize="32" HorizontalOptions="Center" />
 
                             <Label x:Name="flag" HorizontalTextAlignment="Center" TextColor="Black" FontSize="52" HorizontalOptions="Center" />
 
