--- a/Flip2Learn.Forms/Views/Cards/QuestionCard.xaml
+++ b/Flip2Learn.Forms/Views/Cards/QuestionCard.xaml
@@ -23,10 +23,10 @@
 
                         <StackLayout Orientation="Vertical" Margin="0,32">
 
-                            <Label x:Name="resultSubtitle" Style="{DynamicResource Subitle}" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand"/>
-                            <Label x:Name="resultTitle" Style="{DynamicResource TitleBold}" LineHeight="1" HorizontalTextAlignment="Center" FontSize="32" HorizontalOptions="CenterAndExpand" />
+                            <Label x:Name="resultSubtitle" Style="{DynamicResource Subitle}" FontSize="{OnPlatform iOS=13, Android=16}" HorizontalTextAlignment="Center" HorizontalOptions="CenterAndExpand"/>
+                            <Label x:Name="resultTitle" Style="{DynamicResource TitleBold}" LineHeight="1" HorizontalTextAlignment="Center" FontSize="{OnPlatform iOS=32, Android=26}" HorizontalOptions="CenterAndExpand" />
 
-                            <Label x:Name="flagBack" HorizontalTextAlignment="Center" TextColor="Black" FontSize="52" HorizontalOptions="Center" />
+                            <Label x:Name="flagBack" HorizontalTextAlignment="Center" TextColor="Black" FontSize="{OnPlatform iOS=52, Android=38}" HorizontalOptions="Center" />
 
                         </StackLayout>
 
@@ -34,7 +34,7 @@
 
                     <views:RippleView x:Name="know" HorizontalOptions="Center" Padding="22,8" HasShadow="False" Elevation="0" BackgroundColor="{StaticResource GreenAccent}">
                         <StackLayout Orientation="Horizontal">
-                            <Label Text="✔️ Mark as known" TextColor="Black" HorizontalOptions="Center" Style="{DynamicResource Bold}"/>
+                            <Label Text="✔️ Mark as known" TextColor="Black" HorizontalOptions="Center" Style="{DynamicResource Bold}" FontSize="{OnPlatform iOS=16, Android=16}"/>
                         </StackLayout>
                     </views:RippleView>
 
@@ -48,10 +48,10 @@
 
                         <StackLayout Orientation="Vertical" Margin="12,24">
 
-                            <Label x:Name="subtitle" Style="{DynamicResource Subitle}" HorizontalTextAlignment="Center" HorizontalOptions="Center"/>
-                            <Label x:Name="title" Style="{DynamicResource TitleBold}" LineHeight="1" HorizontalTextAlignment="Center"  FontSize="32" HorizontalOptions="Center" />
+                            <Label x:Name="subtitle" Style="{DynamicResource Subitle}" FontSize="{OnPlatform iOS=13, Android=16}" HorizontalTextAlignment="Center" HorizontalOptions="Center"/>
+                            <Label x:Name="title" Style="{DynamicResource TitleBold}" LineHeight="1" HorizontalTextAlignment="Center"  FontSize="{OnPlatform iOS=32, Android=26}" HorizontalOptions="Center" />
 
-                            <Label x:Name="flag" HorizontalTextAlignment="Center" TextColor="Black" FontSize="52" HorizontalOptions="Center" />
+                            <Label x:Name="flag" HorizontalTextAlignment="Center" TextColor="Black" FontSize="{OnPlatform iOS=52, Android=38}" HorizontalOptions="Center" />
 
 
                         </StackLayout>
