--- a/Flip2Learn.Forms/Views/Cards/SprintCompletedCard.xaml
+++ b/Flip2Learn.Forms/Views/Cards/SprintCompletedCard.xaml
@@ -17,11 +17,11 @@
                         <StackLayout Orientation="Vertical" Margin="12,24">
 
                             <Label Text="✔️" HorizontalTextAlignment="Center" TextColor="Black" FontSize="24" HorizontalOptions="Center" />
-                            <Label Text="Spint is completed" Style="{DynamicResource TitleBold}" Margin="0,12,0,16" LineHeight="1" HorizontalTextAlignment="Center" FontSize="18" HorizontalOptions="Center" />
+                            <Label Text="Spint completed" Style="{DynamicResource TitleBold}" Margin="0,12,0,16" LineHeight="1" HorizontalTextAlignment="Center" FontSize="18" HorizontalOptions="Center" />
 
                             <views:RippleView x:Name="newSprint" HorizontalOptions="Center" Padding="22,8" HasShadow="False" Elevation="0" BackgroundColor="{StaticResource GreenAccent}">
                                 <StackLayout Orientation="Horizontal">
-                                    <Label Text="New sprint" TextColor="Black" FontSize="15" HorizontalOptions="Center" Style="{DynamicResource Bold}"/>
+                                    <Label Text="New sprint" TextColor="Black" FontSize="16" HorizontalOptions="Center" Style="{DynamicResource Bold}"/>
                                 </StackLayout>
                             </views:RippleView>
 
