--- a/Flip2Learn.Forms/Pages/FeaturesPage.xaml
+++ b/Flip2Learn.Forms/Pages/FeaturesPage.xaml
@@ -28,13 +28,13 @@
                 <BoxView WidthRequest="150" HeightRequest="150" CornerRadius="75" Color="{DynamicResource GreenAccent}" Opacity="0.8"  Margin="25,25,0,0"/>
                 <BoxView WidthRequest="400" HeightRequest="400" CornerRadius="200" Color="{DynamicResource GreenAccent}" Opacity="0.3" Margin="-100,-100,0,0"/>
                 <BoxView WidthRequest="750" HeightRequest="750" CornerRadius="375" Color="{DynamicResource GreenAccent}" Opacity="0.15" Margin="-275,-275,0,0"/>
-                <Image Source="nerd_emoji" WidthRequest="80" HeightRequest="80" Margin="60,60,0,0"/>
+                <ffimageloading:CachedImage Source="nerd_emoji" WidthRequest="80" HeightRequest="80" Margin="60,60,0,0"/>
             </RelativeLayout>
 
 
 
 
-            <StackLayout Margin="12,300,12,12" Spacing="0">
+            <StackLayout Margin="16,300,16,12" Spacing="0">
                 <Label HorizontalOptions="Start" TextColor="White" LineHeight="0" Opacity="1" FontSize="21" Style="{DynamicResource Bold}" Text="Flip2Learn. Premium"/>
                 <Label HorizontalOptions="Start" TextColor="White" LineHeight="0" Opacity="0.8" Margin="0,16,0,0"  FontSize="16" Text="– No ads"/>
                 <Label HorizontalOptions="Start" TextColor="White" LineHeight="0" Opacity="0.8" Margin="0,4,0,0"  FontSize="16" Text="– All countries available (and dependent territories)"/>
@@ -45,18 +45,18 @@
                         Clicked="Purchase_Clicked"
                         CornerRadius="12"
                         RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}"
-                        RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-120}"/>
+                        RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-130}"/>
 
-            <Button Text="Restore purchase" BackgroundColor="Transparent" FontSize="{OnPlatform Android=14, iOS=14}" TextColor="White" Margin="12,24" Opacity="0.5"
-                        Clicked="Restore_Clicked"
-                        CornerRadius="12"
+            <views:RippleView BackgroundColor="Transparent" Margin="12,24" Opacity="0.5" Clicked="Restore_Clicked" CornerRadius="12"
                         RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width, Factor=1}"
-                        RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-70}"/>
+                        RelativeLayout.YConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height, Factor=1, Constant=-75}">
+                <Label Text="Restore purchase" FontSize="{OnPlatform Android=14, iOS=14}" TextColor="White" HorizontalOptions="Center" VerticalOptions="Center" Padding="9"/>
+            </views:RippleView>
 
 
             <views:RippleView x:Name="close" WidthRequest="32" HeightRequest="32" CornerRadius="16" Background="#22ffffff" Clicked="close_Clicked"
                           RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width, Factor=1, Constant=-40}"
-                          Margin="0,32,0,0">
+                          Margin="{OnPlatform iOS='0,32,0,0', Android='0,16,0,0'}">
                 <ui:MaterialIcon WidthRequest="20" HeightRequest="20" TintColor="White" Source="ic_close_24dp" VerticalOptions="Center" HorizontalOptions="Center"/>
             </views:RippleView>
 
