--- a/Flip2Learn.Forms/Pages/GamePage.xaml
+++ b/Flip2Learn.Forms/Pages/GamePage.xaml
@@ -4,7 +4,8 @@
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                        xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
                        xmlns:views="clr-namespace:Flip2Learn.Forms.Views"
-                       xmlns:ui="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material" xmlns:controls1="clr-namespace:Xamarin.Forms.Controls;assembly=CircularProgressBar"
+                       xmlns:ui="clr-namespace:XF.Material.Forms.UI;assembly=XF.Material"
+                       xmlns:controls1="clr-namespace:Xamarin.Forms.Controls;assembly=CircularProgressBar"
                        BackgroundColor="{DynamicResource main_bg}"
                        NavigationPage.HasNavigationBar="False"
                        x:Class="Flip2Learn.Forms.Pages.GamePage">
@@ -62,7 +63,8 @@
                         Padding="0,12"
                         Spacing="0">
 
-                        <Label 
+                        <Label
+                           x:Name="title"
                            HorizontalOptions="Center"
                            Text="Flip2Learn"
                            TextColor="White"
